--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@slack/events-api": "^2.2.0",
     "body-parser": "^1.13.3",
+    "dotenv": "^7.0.0",
     "ejs": "^2.3.1",
     "express": "~4.9.x",
+    "nedb": "^1.8.0",
+    "node-schedule": "^1.3.2",
     "request": "2.61.0"
   },
   "engines": {
