--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@slack/events-api": "^2.2.0",
+    "async": "^2.6.2",
     "body-parser": "^1.13.3",
     "dotenv": "^7.0.0",
     "ejs": "^2.3.1",
